@@ -4,29 +4,16 @@
 
 # TODO: threshold has been determined without much thought.
 # Observed pnmpsnr output: 56.20 58.26 49.38
+# On another system:       54.73 49.41 44.52
 # A small margin has been added to the above numbers.
 
-# Should print 3 1 1 1 three times
+# Should print "match" three times
 
 pnmtojpeg testimg.ppm | jpegtopnm | \
-  pnmpsnr -machine - testimg.ppm |\
-  awk '{printf("%3d %.2f %.2f %.2f\n", NF,
-                $1>55.0 ? 1000.00 : $1,
-                $2>57.0 ? 1000.00 : $2,
-                $3>48.0 ? 1000.00 : $3) }'
-
+  pnmpsnr -target1=54 -target2=49 -target3=44 - testimg.ppm
 
 pnmtojpeg testimg.ppm -opt | jpegtopnm | \
-  pnmpsnr -machine - testimg.ppm |\
-  awk '{printf("%3d %.2f %.2f %.2f\n", NF,
-                $1>55.0 ? 1000.00 : $1,
-                $2>57.0 ? 1000.00 : $2,
-                $3>48.0 ? 1000.00 : $3) }'
-
+  pnmpsnr -target1=54 -target2=49 -target3=44 - testimg.ppm
 
 pnmtojpeg testimg.ppm -progressive | jpegtopnm | \
-  pnmpsnr -machine - testimg.ppm |\
-  awk '{printf("%3d %.2f %.2f %.2f\n", NF,
-                $1>55.0 ? 1000.00 : $1,
-                $2>57.0 ? 1000.00 : $2,
-                $3>48.0 ? 1000.00 : $3) }'
+  pnmpsnr -target1=54 -target2=49 -target3=44 - testimg.ppm
