@@ -15,47 +15,28 @@ output_tiff=${tmpdir}/output.tiff
 
 pnmtotiffcmyk testimg.ppm > ${output_tiff} && \
   tifftopnm -headerdump -byrow ${output_tiff} | \
-  pnmpsnr -machine - testimg.ppm | \
-  awk '{printf("%3d %.2f %.2f %.2f\n", NF,
-                $1>45.0 ? 1000.00 : $1,
-                $2>59.5 ? 1000.00 : $2,
-                $3>56.5 ? 1000.00 : $3) }'
+  pnmpsnr -target1=45.0 -target2=59.5 -target3=56.5 - testimg.ppm
 
 
 # Note that "-rowsperstrip=1" does not work
 pnmtotiffcmyk -rowsperstrip 1 -lsb2msb testimg.ppm > ${output_tiff} && \
   tifftopnm -respectfillorder -byrow  ${output_tiff} | \
-  pnmpsnr -machine - testimg.ppm | \
-  awk '{printf("%3d %.2f %.2f %.2f\n", NF,
-                $1>45.0 ? 1000.00 : $1,
-                $2>59.5 ? 1000.00 : $2,
-                $3>56.5 ? 1000.00 : $3) }'
+  pnmpsnr -target1=45.0 -target2=59.5 -target3=56.5 - testimg.ppm
 
 
 pnmtotiffcmyk -packbits testimg.ppm > ${output_tiff} && \
   tifftopnm -byrow ${output_tiff} | \
-  pnmpsnr -machine - testimg.ppm | \
-  awk '{printf("%3d %.2f %.2f %.2f\n", NF,
-                $1>45.0 ? 1000.00 : $1,
-                $2>59.5 ? 1000.00 : $2,
-                $3>56.5 ? 1000.00 : $3) }'
+  pnmpsnr -target1=45.0 -target2=59.5 -target3=56.5 - testimg.ppm
 
 
 pnmtotiffcmyk -lzw testimg.ppm > ${output_tiff} && \
   tifftopnm -byrow ${output_tiff} | \
-    pnmpsnr -machine - testimg.ppm | \
-  awk '{printf("%3d %.2f %.2f %.2f\n", NF,
-                $1>45.0 ? 1000.00 : $1,
-                $2>59.5 ? 1000.00 : $2,
-                $3>56.5 ? 1000.00 : $3) }'
+  pnmpsnr -target1=45.0 -target2=59.5 -target3=56.5 - testimg.ppm
 
 
 pnmtotiffcmyk -lzw -predictor 2 testimg.ppm > ${output_tiff} && \
   tifftopnm -respectfillorder -byrow ${output_tiff} | \
-  pnmpsnr -machine - testimg.ppm | \
-  awk '{printf("%3d %.2f %.2f %.2f\n", NF,
-                $1>45.0 ? 1000.00 : $1,
-                $2>59.5 ? 1000.00 : $2,
-                $3>56.5 ? 1000.00 : $3) }'
+  pnmpsnr -target1=45.0 -target2=59.5 -target=56.5 - testimg.ppm
+
 
 rm ${output_tiff}
